/*
 * CDMlib - Cartesian Data Management library
 *
 * Copyright (c) 2013-2014 Advanced Institute for Computational Science, RIKEN.
 * All rights reserved.
 *
 */


REVISION HISTORY
================

------------------
2014-10-18
Edit cdm_NonUniformDomain.h and cdm_DFI.h
cdm_NonUniformDomain.hにおいて、authorのところをaicsに変更した。
また、メソッドRead_CoordinateFile内を一部修正した。
cdm_DFI.hでは、座標データポインタについてのコメント文を追加した。

------------------
2014-10-17
Remake Makefile.am and Makefile.in in src
cdm_NoUniformDomain.Cを削除したので、autoreconfを行って
srcフォルダ内のMakefile.am、Makefile.inを再度生成した。

------------------
2014-10-17
Delete cdm_NoUniformDomain.C and remove old WriteInit in class cdm_DFI
クラスcdm_NoUniformDomainをテンプレートクラスにし、実装部をヘッダー部に
移したため、cdm_NoUniformDomain.Cは必要なくなり削除した。
また、過去にdouble型とfloat型で実装していたメソッドWriteInitは
使わなくなったので削除した。

------------------
2014-10-17
Edit constructor in class cdm_Domain
メソッドWriteInitから受け取る計算領域に関する変数はRegionではなく
Pitchであるため、クラスcdm_Domainのコンストラクタの引数_GlobalRegionを
_GlobalPitchに変更し、GlobalRegionはコンストラクタ内で生成するようにした。
また、cdm_Domainのコンストラクタの引数_GlobalRegion、_GlobalPitchが
double型の場合とfloat型の場合を用意し、これらの変数のdouble型への
キャストをコンストラクタ内で行うようにした。

------------------
2014-10-17
apply template to cdm_NonUniformDomain
不等間隔格子の場合に座標値を保持する配列のポインタXCoordinates,YCoordinates,
ZCoordinates(これらはクラスcdm_NonUniformDomainのメンバ変数)に
テンプレートを適用し、それに合わせてコード編集を行った。
ここで、これらの配列ポインタを引数にもつメソッドWriteInitにもテンプレートを
適用している。

------------------
2014-10-12
Bug fix in conv.C
FCONVのソースファイルconv.C内にバグがあったので修正した。

------------------
2014-10-12
Edit method Read_CoordinateFile in class cdm_NonUniformDomain
クラスcdm_NonUniformDomainのメンバ関数Read_CoordinateFileを編集した。
CoordinateFileの内容とproc.dfiファイルのDomainに記載されたGlobalRegion
に関する内容の一致確認など。
また、CoordinateFileの読込みのエラーコードを追加した。

------------------
2014-10-08
Remake Makefile.am and Makefile.in in src
cdm_NonUniformDomain.C、cdm_NonUniformDomain.hを追加したため、autoreconfを行って
srcフォルダ内のMakefile.am、Makefile.inを再度生成した。

------------------
2014-10-07